--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,9 @@
 input_seq.npy
 binned_data.npy
 target_seq.npy
-__pycache__/utils.cpython-38.pyc
+**/*.json
+wunderground/data/weather_solar_data.csv
+wunderground/data/weather_data.csv
+wunderground/data/weather_data_resampled.csv
+solar_power/data/solar_power_data.csv
+**/*.csv
