--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ wunderground/data/weather_solar_data.csv
 wunderground/data/weather_data.csv
 wunderground/data/weather_data_resampled.csv
 solar_power/data/solar_power_data.csv
-**/*.csv
+*.csv
